Add [-o|--out <output-directory>] support to mule cli